test/e2e/testing-manifests/dra/dra-test-driver-proxy.yaml
# This YAML file deploys the csi-driver-host-path on a number of nodes such
# that it proxies all connections from kubelet (plugin registration and dynamic
# resource allocation). The actual handling of those connections then happens
# inside the e2e.test binary via test/e2e/storage/drivers/proxy. This approach
# has the advantage that no separate container image with the test driver is
# needed and that tests have full control over the driver, for example for
# error injection.
#
# The csi-driver-host-path image is used because:
# - it has the necessary proxy mode (https://github.com/kubernetes-csi/csi-driver-host-path/commit/65480fc74d550a9a5aa81e850955cc20403857b1)
# - its base image contains a shell (useful for creating files)
# - the image is already a dependency of e2e.test

kind: ReplicaSet
apiVersion: apps/v1
metadata:
  name: dra-test-driver
  labels:
    app.kubernetes.io/instance: test-driver.dra.k8s.io
    app.kubernetes.io/part-of: dra-test-driver
    app.kubernetes.io/name: dra-test-driver-kubelet-plugin
    app.kubernetes.io/component: kubelet-plugin
spec:
  selector:
    matchLabels:
      app.kubernetes.io/instance: test-driver.dra.k8s.io
      app.kubernetes.io/part-of: dra-test-driver
      app.kubernetes.io/name: dra-test-driver-kubelet-plugin
      app.kubernetes.io/component: kubelet-plugin
  replicas: 1
  template:
    metadata:
      labels:
        app.kubernetes.io/instance: test-driver.dra.k8s.io
        app.kubernetes.io/part-of: dra-test-driver
        app.kubernetes.io/name: dra-test-driver-kubelet-plugin
        app.kubernetes.io/component: kubelet-plugin
    spec:
      # Ensure that all pods run on distinct nodes.
      affinity:
        podAntiAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
          - labelSelector:
              matchLabels:
                app.kubernetes.io/instance: test-driver.dra.k8s.io
            topologyKey: kubernetes.io/hostname

      containers:
        - name: pause
          image: registry.k8s.io/sig-storage/hostpathplugin:v1.16.1
          command:
            - /bin/sh
            - -c
            - while true; do sleep 10000; done
          volumeMounts:
            - mountPath: /var/lib/kubelet/plugins/test-driver.dra.k8s.io
              name: socket-dir
            - mountPath: /var/lib/kubelet/plugins_registry
              name: registration-dir
            - mountPath: /cdi
              name: cdi-dir
            - mountPath: /var/run/dra-device-attributes
              name: dra-attrs-dir
          securityContext:
            privileged: true

      volumes:
        - hostPath:
            # There's no way to remove this. Conceptually, it may have to
            # survive Pod restarts and there's no way to tell the kubelet
            # that this isn't the case for this Pod.
            path: /var/lib/kubelet/plugins/test-driver.dra.k8s.io
            type: DirectoryOrCreate
          name: socket-dir
        - hostPath:
            path: /var/lib/kubelet/plugins_registry
            type: DirectoryOrCreate
          name: registration-dir
        - hostPath:
            path: /var/run/cdi
            type: DirectoryOrCreate
          name: cdi-dir
        - hostPath:
            path: /var/run/dra-device-attributes
            type: DirectoryOrCreate
          name: dra-attrs-dir
